--- a/src/Assets/Errors/500.html
+++ b/src/Assets/Errors/500.html
@@ -1,22 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Page Not Found :(</title>
+    <title>Технические проблемы</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Not found <span>:(</span></h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
-    <p>It looks like this was the result of either:</p>
-    <ul>
-      <li>a mistyped address</li>
-      <li>an out-of-date link</li>
-    </ul>
-    <script>
-      var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
-    </script>
-    <script src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
-  </div>
+    <img src="http://one2team.ru/img/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
+
+<!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
