--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -5,9 +5,8 @@
 <subtitle><l><call>Bundle</call>.Control:Title</l></subtitle>
 
 <div class="page-header">
-    <h2>Центр управления</h2>
-</div>
-<div class="header">
+    <a href="/">&larr; <l>Control.Panel:Return</l></a>
+    <h2><l>Control.Panel:Title</l></h2>
     <h3><l><call>Bundle</call>.Control:Title</l></h3>
 </div>
 <div class="page-content">
