--- a/src/Assets/Default/UI/Form/Textfield.html
+++ b/src/Assets/Default/UI/Form/Textfield.html
@@ -1,5 +1,7 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :
+        <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
+    </label>
     <div class="controls">
         <k>HTML</k>
     </div>
