--- a/src/Assets/User/Activation/Needed.html
+++ b/src/Assets/User/Activation/Needed.html
@@ -18,7 +18,8 @@
             </div>
 
             <div class="span6">
-                <a class="header3" href="http://<k>Server</k>">Перейти на <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> <k>Server</k></a><br/>
+                <img src="http://<k>Server</k>/favicon.ico" width="16" height="16"/> <a class="header3" href="http://<k>Server</k>">Перейти
+                на <k>Server</k></a><br/>
 
                 <a class="header3" href="/mail/user/<k>ID</k>">Выслать активационный код еще раз</a>
             </div>
