--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -21,7 +21,7 @@
 <body>
 
 <div id="container">
-    <img src="http://leasingpad.local/img/logo-Production.png" style="float: right;"/>
+    <img src="<k>Host</k>/img/logo.png" style="float: right;"/>
     <h2>Приветствуем, <k>Fullname</k>!</h2>
 
     <p>Вы успешно зарегистрировались в проекте <strong><a href="<k>Host</k>"><k>Project.Title</k></a></strong>.</p>
