--- a/src/Assets/Errors/403.html
+++ b/src/Assets/Errors/403.html
@@ -1,25 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>403 :(</title>
-</head>
-<body>
-  <div class="container">
-      <div class="row">
-          <h1 class="page-header">Ой!</h1>
+<div class="container-fluid">
+  <div class="row-fluid">
+      <h1 class="page-header">Ошибка 403</h1>
 
-          <h2 class="page-header">Что случилось?</h2>
-          <h3>У вас нет доступа к этой странице.</h3>
-          <hr/>
-          <block><div class="alert">Причина: <k>Message</k></div></block>
+      <h2 class="page-header">Что случилось?</h2>
+      <h3>У вас нет доступа к этой странице.</h3>
+      <hr/>
+      <block><div class="alert">Причина: <k>Message</k></div></block>
 
-          <h2 class="page-header">Что делать?</h2>
-          Можно попробовать начать с <a href="/">главной</a>.
+      <h2 class="page-header">Что делать?</h2>
+      Можно попробовать начать с <a href="/">главной</a>.
 
-          <div>P.S. Команда сайта извещена об инциденте.</div>
-      </div>
+      <div>P.S. Команда сайта извещена об инциденте.</div>
   </div>
-
-</body>
-</html>
+</div>
