--- a/src/Assets/Errors/404.html
+++ b/src/Assets/Errors/404.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>404 :(</title>
-</head>
-<body>
-  <div class="container">
-      <div class="row">
-          <h1 class="page-header">Ой!</h1>
+<div class="container-fluid">
+      <div class="row-fluid">
+          <h1 class="page-header">Ошибка 404</h1>
 
           <h2 class="page-header">Что случилось?</h2>
           Вы обратились к странице, которой нет.<br/>
@@ -18,6 +11,3 @@
           <div>P.S. Команда сайта извещена об инциденте.</div>
       </div>
   </div>
-
-</body>
-</html>
