Fixes, server control module.

--- a/src/Assets/User/Reset/EMail.html
+++ b/src/Assets/User/Reset/EMail.html
@@ -1,33 +1,8 @@
-<!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" xmlns:vx="http://"> <!--<![endif]-->
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<img src="<k>Host</k>/img/logo.png" style="float: right;"/>
 
-    <title>Activation</title>
-    <meta name="description" content="Codeine Site">
-    <meta name="author" content="">
+<h1>Приветствуем, <k>Fullname</k>!</h1>
 
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+Кто-то, возможно вы, запросил изменение пароля.
 
-    <link rel="index" href="/" />
-</head>
-
-<body>
-
-<div id="container">
-    <h1>Приветствуем, <k>Fullname</k>!</h1>
-
-    Кто-то, возможно вы, запросил изменение пароля.
-
-    <h4>Ваш новый пароль:</h4>
-    <div style="width: 140px; border: 1px solid #cccccc; text-align:center; font-size: 2em; padding: 4px; margin: auto;"> <k>Password</k></div>
-
-</div>
-
-</body>
-</html>
+<h4>Ваш новый пароль:</h4>
+<div style="width: 140px; border: 1px solid #cccccc; text-align:center; font-size: 2em; padding: 4px; margin: auto;"> <k>Password</k></div>
