--- a/src/Assets/Security/Auth/System/Loginza.html
+++ b/src/Assets/Security/Auth/System/Loginza.html
@@ -1,4 +1,4 @@
 <place>Content</place>
 <script src="http://loginza.ru/js/widget.js" type="text/javascript"></script>
-<iframe src="http://loginza.ru/api/widget?overlay=loginza&token_url=<call>LoginzaURL</call>"
+<iframe src="http://loginza.ru/api/widget?overlay=loginza&token_url=<call>Host</call><call>LoginzaURL</call>"
 style="width:359px;height:300px;" scrolling="no" frameborder="no"></iframe>
