--- a/src/Assets/User/Authenticate.html
+++ b/src/Assets/User/Authenticate.html
@@ -9,6 +9,9 @@
         <exec>
             <Service>Security.Auth.System.Loginza</Service>
             <Method>Identificate</Method>
+            <Call>
+                <Host><call>Host</call></Host>
+            </Call>
         </exec>
     </div>
 </div>
