--- a/src/Assets/Default/UI/Form/Datepicker.html
+++ b/src/Assets/Default/UI/Form/Datepicker.html
@@ -1,19 +1,9 @@
-<js>bootstrap-datepicker</js>
-<css>bootstrap-datepicker</css>
-<jsrun>
-    $(document).ready(function(){
-        $('.datepicker').datepicker({format:'dd.mm.yyyy'});
-    });
-</jsrun>
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"><l><k>Label</k></l></label>
+    <label class="control-label" for="<k>Name</k>"><l><k>Label</k></l>:
+    <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
 
     <div class="controls">
-       <div class="input-append date">
-          <input id="<k>Name</k>"
-                 name="<k>Name</k>" class="datepicker" size="16" type="text" value="<k>Value</k>" id="<k>Name</k>">
-          <span class="add-on"><i class="icon-th"></i></span>
-        </div>
+       <input id="<k>Name</k>" name="<k>Name</k>" class="datepicker" size="16" type="date" value="<k>Value</k>" id="<k>Name</k>">
     </div>
 </div>
 
