--- a/src/Assets/Default/UI/Form/Datepicker.html
+++ b/src/Assets/Default/UI/Form/Datepicker.html
@@ -3,7 +3,8 @@
     <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
 
     <div class="controls">
-       <input id="<k>Name</k>" name="<k>Name</k>" class="datepicker" type="date" value="<k>Value</k>" id="<k>Name</k>">
+       <input id="<k>Name</k>" name="<k>Name</k>" class="datepicker" type="date" value="<k>Value</k>" id="<k>Name</k>"
+               <block>required=<k>Required</k></block> />
     </div>
 </div>
 
