--- a/src/Assets/Block/Show/Control.html
+++ b/src/Assets/Block/Show/Control.html
@@ -1,14 +1,11 @@
-<tr><td><a href="/<k>Slug</k>"><k>Title</k></a>
-<div class="pull-right">
-            <div class="btn-group">
-                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                    Действия
-                    <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
-                    <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
-                </ul>
-            </div>
+<tr>
+    <td>
+        <div class="pull-right">
+            <ul class="nav nav-pills">
+                <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
+                <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
+            </ul>
         </div>
-</td></tr>
+        <h4><k>Title</k></h4>
+    </td>
+</tr>
