Tons of fixes — 7.7.6

--- a/src/Assets/User/Show/Control.html
+++ b/src/Assets/User/Show/Control.html
@@ -1,14 +1,10 @@
-<tr><td><a href="/control/<call>Entity</call>/Show/<k>ID</k>"><k>Fullname</k></a>
-<div class="pull-right">
-    <div class="btn-group">
-        <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-            Действия
-            <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
+<tr><td>
+    <div class="pull-right">
+        <ul class="nav nav-pills">
             <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
             <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
         </ul>
     </div>
-</div>
+    <h3><k>Surname</k> <k>Name</k></h3>
+    <h4><k>EMail</k></h4>
 </td></tr>
