--- a/src/Assets/Journal/Show/Control.html
+++ b/src/Assets/Journal/Show/Control.html
@@ -1,15 +1,14 @@
 <tr>
     <td>
-        <datetime format="H:i:s d.m.Y"><k>Time</k></datetime>
+        <datetime><k>Time</k></datetime>
     </td>
     <td>
-        <a href="/control/Journal/Filter?Service=<k>Service</k>">:<l><k>Service</k>:Service</l></a>
+        <l><k>Entity</k>.Entity:Entity</l>
     </td>
     <td>
-        <a href="/control/Journal/Filter?On=<k>On</k>"><l><k>Service</k>:<k>On</k></l></a>
+        <l><k>Event</k></l>
     </td>
     <td>
-        <entity>User:<k>Session.User.ID</k></entity>
+        <entity>User:<k>User</k></entity>
     </td>
-    <td><a href="/control/Journal/Show/<k>ID</k>">Посмотреть</a> </td>
 </tr>
