--- a/src/Assets/Control/UI/Navlist/Active.html
+++ b/src/Assets/Control/UI/Navlist/Active.html
@@ -1,6 +1,7 @@
 <li class="active">
     <a href="/control/<k>ID</k>">
+        <block><span class=" pull-right"><k>Count</k></span></block>
     <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <l><k>ID</k>.Control:Title</l> <block><span class="badge badge-info pull-right"><k>Count</k></span></block>
+        <l><k>ID</k>.Control:Title</l>
     </a>
 </li>
