--- a/src/Assets/Control/UI/Navlist/Passive.html
+++ b/src/Assets/Control/UI/Navlist/Passive.html
@@ -1,6 +1,8 @@
 <li>
+    <block><span class="muted pull-right"><k>Count</k></span></block>
     <a href="/control/<k>ID</k>">
-    <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <l><k>ID</k>.Control:Title</l> <block><span class="badge badge-info pull-right"><k>Count</k></span></block>
+        <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
+        <l><k>ID</k>.Control:Title</l>
     </a>
+
 </li>
