--- a/src/Assets/Default/UI/Table/Body.html
+++ b/src/Assets/Default/UI/Table/Body.html
@@ -1,3 +1,3 @@
-<table class="table table-bordered table-striped  table-condensed">
+<table class="table table-striped">
     <k>Value</k>
 </table>
