Delete fixes. Temporary.

--- a/src/Assets/User/Activation/EMail.html
+++ b/src/Assets/User/Activation/EMail.html
@@ -28,7 +28,7 @@
 
     <div style="margin-bottom: 4px;"><a target="_blank" href="<k>ActivationURL</k>">Щелкните для активации</a></div>
     <strong>или</strong>
-    <div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: http://<k>ActivationURL</k></div>
+    <div style="margin-top: 4px;">Скопируйте эту ссылку в окно браузера: <k>ActivationURL</k></div>
 </div>
 
 </body>
