Monitor API #800 Bugfixes

--- a/src/Assets/Default/UI/Form/Select.html
+++ b/src/Assets/Default/UI/Form/Select.html
@@ -3,7 +3,7 @@
             <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
 </label>
     <div class="controls">
-        <select <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> class="span12" size="<k>Size</k>">
+        <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> class="span12" size="<k>Size</k>">
             <k>Options</k>
         </select>
     </div>
