--- a/src/Assets/User/Show/Control.html
+++ b/src/Assets/User/Show/Control.html
@@ -1,8 +1,8 @@
 <tr><td>
     <div class="pull-right">
         <ul class="nav nav-pills">
-            <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>">Редактировать</a></li>
-            <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>">Удалить</a></li>
+            <li><a href="/control/<call>Entity</call>/Update/<k>ID</k>"><l><call>Entity</call>.Control:Update</l></a></li>
+            <li><a href="/control/<call>Entity</call>/Delete/<k>ID</k>"><l><call>Entity</call>.Control:Delete</l></a></li>
         </ul>
     </div>
     <h3><k>Surname</k> <k>Name</k></h3>
