--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -1,8 +1,8 @@
 <form method="post" class="form-horizontal def-form auth" action="/login">
     <div class="control-group">
-        <label class="control-label" for="EMail">E-mail:</label>
+        <label class="control-label" for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
         <div class="controls">
-            <input class="span6" id="EMail" type="text" name="EMail" value="" placeholder="example@example.com" required="required"
+            <input class="span6" id="Determinant" type="text" name="<call>Determinant</call>" value="" placeholder="example@example.com" required="required"
                    autofocus="autofocus"/>
         </div>
     </div>
@@ -10,7 +10,8 @@
         <label class="control-label" for="Password">Пароль:</label>
         <div class="controls">
             <input class="span6" id="Password" type="password" name="Password" value="" placeholder="Пароль" required="required" />
-            <a class="forgot" href="/forgot">Забыли пароль?</a>
+            &nbsp;
+                <a class="forgot" href="/forgot">Забыли пароль?</a>
         </div>
     </div>
     <div class="control-group">
