--- a/src/Assets/User/Authenticate.html
+++ b/src/Assets/User/Authenticate.html
@@ -1,11 +1,8 @@
-<div class="row-fluid">
-    <div class="span8">
+<div class="row">
+    <div class="span12">
         <exec>
             <Service>Security.Auth.System.Password</Service>
             <Method>Identificate</Method>
         </exec>
-    </div>
-    <div class="span4">
-
     </div>
 </div>
