--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -2,7 +2,7 @@
     <div class="control-group">
         <label class="control-label" for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
         <div class="controls">
-            <input class="span6" id="Determinant" type="text" name="<call>Determinant</call>" value="" placeholder="example@example.com" required="required"
+            <input class="span6" id="Determinant" type="text" name="<call>Determinant</call>" value="" required="required"
                    autofocus="autofocus"/>
         </div>
     </div>
