--- a/src/Assets/Default/UI/Form/Datepicker.html
+++ b/src/Assets/Default/UI/Form/Datepicker.html
@@ -1,10 +1,20 @@
+<js>bootstrap-datepicker</js>
+<css>bootstrap-datepicker</css>
+
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"><l><k>Label</k></l>:
-    <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if></label>
+    <label class="control-label" for="<k>Name</k>"><l><k>Label</k></l></label>
 
     <div class="controls">
-       <input id="<k>Name</k>" name="<k>Name</k>" type="date" value="<k>Value</k>" id="<k>Name</k>"
-               <block>required=<k>Required</k></block> />
+       <div class="input-append date">
+          <input id="<k>Name</k>"
+                 name="<k>Name</k>" class="datepicker span12" size="16" type="text" value="<k>Value</k>" id="<k>Name</k>">
+          <span class="add-on"><i class="icon-th"></i></span>
+        </div>
     </div>
 </div>
 
+<jsrun>
+    $(document).ready(function(){
+        $('.datepicker').datepicker({format:'dd.mm.yy'});
+    });
+</jsrun>
