--- a/src/Assets/Default/UI/Form/File.html
+++ b/src/Assets/Default/UI/Form/File.html
@@ -8,8 +8,10 @@
             <block>placeholder="<k>Placeholder</k>"</block> />
         <block>Максимальный размер: <k>MaxSize</k></block>
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
-        <label class="checkbox">
-            <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
-        </label>
+        <if value="<k>Value</k>" neq="">
+            <label class="checkbox">
+                <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
+            </label>
+        </if>
     </div>
 </div>
