--- a/src/Assets/Article/Control/Show/Short.html
+++ b/src/Assets/Article/Control/Show/Short.html
@@ -7,4 +7,5 @@
     </div>
     <a href="/control/<call>Entity</call>/Show/<k>ID</k>"><h4><k>Title</k></h4></a>
     <h5>/<k>Slug</k></h5>
+    <k>Words</k> слов, <k>Chars</k> знаков без пробелов, <k>Sickness</k>% тошноты.
 </td></tr>
