--- a/src/Assets/Errors/400.html
+++ b/src/Assets/Errors/400.html
@@ -1,22 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>400 :(</title>
-</head>
-<body>
-  <div class="container">
-      <div class="row">
-          <h1 class="page-header">Ой!</h1>
+<h2>Ошибка 400</h2>
 
-          <h2 class="page-header">Что случилось?</h2>
-          Наш сервер не понял вашего запроса
-          <h2 class="page-header">Что делать?</h2>
-          Попробуйте ещё раз.
+<h3>Что случилось?</h3>
+Наш сервер не понял вашего запроса.
+<hr/>
 
-          <div>P.S. Команда сайта извещена об инциденте.</div>
-      </div>
-  </div>
+<h3>Что делать?</h3>
+Можно попробовать начать с <a href="/">главной</a>.
 
-</body>
-</html>
+<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
