--- a/src/Assets/Errors/403.html
+++ b/src/Assets/Errors/403.html
@@ -1,15 +1,10 @@
-<div class="container-fluid">
-  <div class="row-fluid">
-      <h1 class="page-header">Ошибка 403</h1>
+<h2>Ошибка 403</h2>
 
-      <h2 class="page-header">Что случилось?</h2>
-      <h3>У вас нет доступа к этой странице.</h3>
-      <hr/>
-      <block><div class="alert">Причина: <k>Message</k></div></block>
+<h3>Что случилось?</h3>
+У вас нет доступа к этой странице.
+<hr/>
 
-      <h2 class="page-header">Что делать?</h2>
-      Можно попробовать начать с <a href="/">главной</a>.
+<h3>Что делать?</h3>
+Можно попробовать начать с <a href="/">главной</a>.
 
-      <div>P.S. Команда сайта извещена об инциденте.</div>
-  </div>
-</div>
+<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
