--- a/src/Assets/Errors/405.html
+++ b/src/Assets/Errors/405.html
@@ -1,8 +1,7 @@
-<h2>Ошибка 404</h2>
+<h2>Ошибка 405</h2>
 
 <h3>Что случилось?</h3>
-Вы обратились к странице, которой нет.<br/>
-Возможно, вы опечатались, либо страница была удалена.
+Этот адрес не поддерживает метод доступа, который вы используете.
 <hr/>
 
 <h3>Что делать?</h3>
