--- a/src/Assets/Errors/406.html
+++ b/src/Assets/Errors/406.html
@@ -1,8 +1,7 @@
-<h2>Ошибка 404</h2>
+<h2>Ошибка 406</h2>
 
 <h3>Что случилось?</h3>
-Вы обратились к странице, которой нет.<br/>
-Возможно, вы опечатались, либо страница была удалена.
+Запрошенный URI не может удовлетворить переданным в заголовке характеристикам.
 <hr/>
 
 <h3>Что делать?</h3>
