--- a/src/Assets/Errors/409.html
+++ b/src/Assets/Errors/409.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2>Ошибка 409</h2>
 
 <h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+Произошёл конфликт (например, одновременная запись).
 <hr/>
 
 <h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+Можете повторить свой запрос.
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
