--- a/src/Assets/Errors/413.html
+++ b/src/Assets/Errors/413.html
@@ -1,22 +1,10 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>413 :(</title>
-</head>
-<body>
-  <div class="container">
-      <div class="row">
-          <h1 class="page-header">Ой!</h1>
+<h2>Ошибка 413</h2>
 
-          <h2 class="page-header">Что случилось?</h2>
-          Вы попытались залить слишком большой файл.
-          <h2 class="page-header">Что делать?</h2>
-          Подберите файл поменьше.
+<h3>Что случилось?</h3>
+Вы попытались залить слишком большой файл.
+<hr/>
 
-          <div>P.S. Команда сайта извещена об инциденте.</div>
-      </div>
-  </div>
+<h3>Что делать?</h3>
+Подберите файл поменьше.
 
-</body>
-</html>
+<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
