--- a/src/Assets/Errors/500.html
+++ b/src/Assets/Errors/500.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Технические проблемы</title>
-</head>
-<body>
-    <img src="http://one2team.ru/img/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
+<h2>Ошибка 500</h2>
 
-<!-- Ничего интересного в исходниках нет -->
-</body>
-</html>
+<h3>Что случилось?</h3>
+Технические проблемы в приложении.
+<hr/>
+
+<h3>Что делать?</h3>
+Подождать и повторить запрос.
+
+<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
