--- a/src/Assets/Errors/401.html
+++ b/src/Assets/Errors/401.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2>Ошибка 401</h2>
 
 <h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+Эта страница требует авторизации.
 <hr/>
 
 <h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+Можно попробовать авторизоваться.
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
