--- a/src/Assets/Errors/402.html
+++ b/src/Assets/Errors/402.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2>Ошибка 402</h2>
 
 <h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+Эта страница требует оплаты.<br/>
 <hr/>
 
 <h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+Можно попробовать оплатить услугу.
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
