--- a/src/Assets/Errors/410.html
+++ b/src/Assets/Errors/410.html
@@ -1,8 +1,7 @@
-<h2>Ошибка 404</h2>
+<h2>Ошибка 410</h2>
 
 <h3>Что случилось?</h3>
-Вы обратились к странице, которой нет.<br/>
-Возможно, вы опечатались, либо страница была удалена.
+Вы обратились к странице, которая была здесь, но была удалена.
 <hr/>
 
 <h3>Что делать?</h3>
