--- a/src/Assets/Errors/414.html
+++ b/src/Assets/Errors/414.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2>Ошибка 413</h2>
 
 <h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+Вы попытались обратиться к слишком длинному адресу
 <hr/>
 
 <h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+Подберите адрес поменьше.
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
