--- a/src/Assets/Errors/502.html
+++ b/src/Assets/Errors/502.html
@@ -1,10 +1,10 @@
-<h2>Ошибка 418</h2>
+<h2>Ошибка 500</h2>
 
 <h3>Что случилось?</h3>
-Вы не прошли тест CAPTCHA.<br/>
+Технические проблемы на сервере.
 <hr/>
 
 <h3>Что делать?</h3>
-Можно попробовать <a href="window.back()">вернуться.</a>.
+Подождать и повторить запрос.
 
 <small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
