--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title><call>Project.Title</call></title>
+    <title/>
     <description/>
 
     <meta name="author" content="">
@@ -17,12 +17,12 @@
 
     <link rel="index" href="/" />
 
-    <css>bootstrap</css>
-    <css>bootstrap:responsive</css>
+    <css>bootstrap:min</css>
+    <css>bootstrap:responsive.min</css>
     <css>Default</css>
 
     <js>jquery:min</js>
-    <js>bootstrap</js>
+    <js>bootstrap:min</js>
 
     <js>Locale:live</js>
 
