--- a/src/Assets/Default/Main.html
+++ b/src/Assets/Default/Main.html
@@ -21,7 +21,7 @@
     <css>bootstrap:responsive.min</css>
     <css>Default</css>
 
-    <js>jquery:min</js>
+    <js>jquery18:min</js>
     <js>bootstrap:min</js>
 
     <js>Locale:live</js>
