--- a/src/Assets/SEO/Control/Do.html
+++ b/src/Assets/SEO/Control/Do.html
@@ -1,88 +1,1 @@
-<h2>Основные показатели сайта</h2>
-<div class="row-fluid">
-    <div class="span4">
-        <h3>Яндекс</h3>
-
-        <div>
-            Яндекс тИЦ
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Яндекс.Каталог
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Ссылаются
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Проиндексировано
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Упоминаний
-            <div class="pull-right ">?</div>
-        </div>
-    </div>
-
-    <div class="span4">
-        <h3>Google</h3>
-
-
-        <div>
-            Google PageRank
-            <div class="pull-right ">?</div>
-        </div>
-
-
-        <div>
-            DMOZ.org
-            <div class="pull-right ">?</div>
-        </div>
-
-
-        <div>
-            Проиндексировано
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Ссылается сайтов
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Упоминаний
-            <div class="pull-right ">?</div>
-        </div>
-    </div>
-    <div class="span4">
-        <h3>Разное</h3>
-
-
-        <div>
-            Возраст домена
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Хостер
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            IP
-            <div class="pull-right ">?</div>
-        </div>
-
-        <div>
-            Сайтов на том же IP
-            <div class="pull-right ">?</div>
-        </div>
-
-    </div>
-</div>
+<place>Content</place>
