--- a/src/down.html
+++ b/src/down.html
@@ -2,10 +2,15 @@
 <html>
 <head>
     <title>Технический перерыв</title>
+<style>
+    body
+    {
+        background-image: url('/img/blackorchid.png');
+    }
+</style>
 </head>
 <body>
-    <img src="http://one2team.ru/img/down.jpg" style="position: absolute; top: 25%;left: 35%" alt="Лебединое озеро"/>
-
+<h1>Ведутся технические работы</h1>
 <!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
