--- a/src/down.html
+++ b/src/down.html
@@ -5,7 +5,7 @@
 <style>
     body
     {
-        background-image: url('/img/blackorchid.png');
+        background-image: url('http://one2team.ru/img/blackorchid.png');
     }
 </style>
 </head>
