--- a/src/down.html
+++ b/src/down.html
@@ -5,6 +5,7 @@
 <style>
     body
     {
+        color: #eeeeee;
         background-image: url('http://one2team.ru/img/blackorchid.png');
     }
 </style>
