--- a/src/down.html
+++ b/src/down.html
@@ -6,7 +6,8 @@
     body
     {
         color: #eeeeee;
-        background-image: url('http://one2team.ru/img/blackorchid.png');
+        background-color: #151515;
+        background-image: url('http://static.one2team.ru/img/debut_dark.png');
     }
 </style>
 </head>
