--- a/src/Assets/Default/UI/Form/Datepicker.html
+++ b/src/Assets/Default/UI/Form/Datepicker.html
@@ -6,15 +6,12 @@
 
     <div class="controls">
        <div class="input-append date">
-          <input id="<k>Name</k>"
-                 name="<k>Name</k>" class="datepicker span12" size="16" type="text" value="<k>Value</k>" id="<k>Name</k>">
-          <span class="add-on"><i class="icon-th"></i></span>
+          <input id="<k>Name</k>" name="<k>Name</k>" class="datepicker" size="16" type="text" value="<k>Value</k>" id="<k>ID</k>" <block>required
+           ="<k>Required</k>"</block> />
         </div>
     </div>
 </div>
 
 <jsrun>
-    $(document).ready(function(){
-        $('.datepicker').datepicker({format:'dd.mm.yy'});
-    });
+    $('.datepicker').datepicker();
 </jsrun>
