--- a/src/Assets/Default/UI/Form.html
+++ b/src/Assets/Default/UI/Form.html
@@ -1,5 +1,6 @@
 <form id="form" method="post" class="form-vertical" action="<k>Action</k>" enctype="multipart/form-data">
-    <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
+    <place>Message</place>
+    <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
 
     <place>Form</place>
     <div class="form-actions">
