--- a/src/Assets/Entity/Reject.html
+++ b/src/Assets/Entity/Reject.html
@@ -2,9 +2,9 @@
 <form action="" method="post" class="form-vertical">
     <place>Content</place>
 
-    <input type="hidden" name="BackURL" value="<call>BackURL</call>" />
+    <input type="hidden" name="BackURL" value="<call>Request.BackURL</call>" />
     <div class="form-actions">
         <button type="submit" class="btn btn-danger">Отвергнуть</button>
-        <a href="<call>BackURL</call>" class="btn btn-success">Я передумал</a>
+        <a href="<call>Request.BackURL</call>" class="btn btn-success">Я передумал</a>
     </div>
 </form>
