--- a/src/Assets/IO/Control/Short.html
+++ b/src/Assets/IO/Control/Short.html
@@ -3,5 +3,9 @@
     <td><k>Driver</k></td>
     <td><k>Server</k></td>
     <td><k>Directory</k></td>
-    <td><img src="/img/icons/Control/IO/Status/<k>Status</k>.png" width="16" height="16"/></td>
+    <td>
+        <image>
+            <Source>IO:Status/<k>Status</k>.png</Source>
+        </image>
+    </td>
 </tr>
