--- a/src/Assets/Article/Control/Table.html
+++ b/src/Assets/Article/Control/Table.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-bordered">
+<table class="table table-striped">
     <place>Content</place>
 </table>
 <place>Pagination</place>
