--- a/src/Assets/Default/UI/Form/Textarea.html
+++ b/src/Assets/Default/UI/Form/Textarea.html
@@ -1,6 +1,8 @@
 <div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :</label>
+    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l> :
+        <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
+    </label>
     <div class="controls">
-        <textarea <block>required="<k>Required</k>"</block> class="span12" name="<k>Name</k>"><k>Value</k></textarea>
+        <k>HTML</k>
     </div>
 </div>
