--- a/src/Assets/Default/UI/Form/Select.html
+++ b/src/Assets/Default/UI/Form/Select.html
@@ -1,9 +1,8 @@
 <div class="control-group">
     <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:
-            <if value="<k>Required</k>" eq="1"><span class="required-star">*</span></if>
 </label>
     <div class="controls">
-        <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> class="span12" size="<k>Size</k>">
+        <select id="<k>ID</k>"  <block>multiple=<k>Multiple</k></block> name="<k>Name</k>" <block>required="<k>Required</k>" </block> size="<k>Size</k>">
             <k>Options</k>
         </select>
     </div>
