--- a/src/Assets/Project/Control/Do.html
+++ b/src/Assets/Project/Control/Do.html
@@ -18,6 +18,12 @@
         <td><call>Version.Project.Major</call>.<call>Version.Project.Minor</call></td>
     </tr>
     <tr>
+        <td>Последнее обновление</td>
+        <td>
+            <datetime format="d.m.Y H:i"><call>Project.MTime</call></datetime>
+        </td>
+    </tr>
+    <tr>
         <td>Версия ядра</td>
         <td><call>Version.Codeine.Major</call>.<call>Version.Codeine.Minor</call></td>
     </tr>
