--- a/src/down.html
+++ b/src/down.html
@@ -5,13 +5,13 @@
 <style>
     body
     {
-        color: #eeeeee;
-        background-color: #151515;
-        background-image: url('http://static.one2team.ru/img/debut_dark.png');
+        color: #333333;
+        text-align: center;
     }
 </style>
 </head>
 <body>
+<img src="htttp://one2team.ru/down.png" />
 <h1>Ведутся технические работы</h1>
 <!-- Ничего интересного в исходниках нет -->
 </body>
