--- a/src/down.html
+++ b/src/down.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<img src="htttp://one2team.ru/down.png" />
+<img src="http://one2team.ru/down.png" />
 <h1>Ведутся технические работы</h1>
 <!-- Ничего интересного в исходниках нет -->
 </body>
