--- a/src/Assets/Default/UI/Form/File.html
+++ b/src/Assets/Default/UI/Form/File.html
@@ -8,7 +8,7 @@
             <block>placeholder="<k>Placeholder</k>"</block> />
         <block>Максимальный размер: <k>MaxSize</k></block>
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
-        <if value="<k>Value</k>" neq="">
+        <if value="<k>Value</k>" neq="0">
             <label class="checkbox">
                 <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
             </label>
