--- a/src/Assets/Default/UI/Form/File.html
+++ b/src/Assets/Default/UI/Form/File.html
@@ -10,7 +10,7 @@
         <block><br/>Разрешённые типы: <k>TypeHint</k></block>
         <if value="<k>Value</k>" neq="0">
             <label class="checkbox">
-                <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить
+                <input type="checkbox" name="<k>Name</k>" value="-1" /> Удалить <k>Value</k>
             </label>
         </if>
     </div>
