--- a/src/Assets/Message/Main.html
+++ b/src/Assets/Message/Main.html
@@ -1,7 +1,7 @@
 <subtitle>Сообщения</subtitle>
 <breadcrumb href="/messages">Сообщения</breadcrumb>
 <div class="btn-group">
-    <a class="btn btn-large btn-success" href="/messages/new"><span class="fa-icon-envelope"></span> Создать сообщение</a>
+    <a class="btn btn-large btn-success" href="/messages/new"><span class="icon-white icon-plus"></span> Создать сообщение</a>
     <a class="btn btn-large" href="/messages/inbox">Входящие</a>
     <a class="btn btn-large" href="/messages/outbox">Исходящие</a>
 </div>
