--- a/src/Assets/Message/Main.html
+++ b/src/Assets/Message/Main.html
@@ -1,9 +1,14 @@
 <subtitle>Сообщения</subtitle>
 <breadcrumb href="/messages">Сообщения</breadcrumb>
 <div class="btn-group">
-    <a class="btn btn-large btn-success" href="/messages/new"><span class="icon-white icon-plus"></span> Создать сообщение</a>
-    <a class="btn btn-large" href="/messages/inbox">Входящие</a>
-    <a class="btn btn-large" href="/messages/outbox">Исходящие</a>
+    <a class="btn btn-inverse" href="/messages/new"><span class="icon-white icon-plus"></span> Создать сообщение</a>
+</div>
+<div class="pull-right btn-group">
+    <a class="btn" href="/messages/inbox">Входящие
+        <span class="badge"><call>Session.User.Inbox</call></span>
+    <a class="btn" href="/messages/outbox">Исходящие
+        <span class="badge"><call>Session.User.Outbox</call></span>
+    </a>
 </div>
 
 <hr/>
