--- a/src/Assets/Control/UI/Navlist/Active.html
+++ b/src/Assets/Control/UI/Navlist/Active.html
@@ -1,7 +1,11 @@
 <li class="active">
+    <block><span class="muted pull-right"><k>Count</k></span></block>
     <a href="/control/<k>ID</k>">
-        <block><span class=" pull-right"><k>Count</k></span></block>
-    <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
+        <image>
+            <Source><k>ID</k>:<k>ID</k>.png</Source>
+            <Width>16</Width>
+        </image>
         <l><k>ID</k>.Control:Title</l>
     </a>
+
 </li>
