--- a/src/Assets/Control/UI/Navlist/Passive.html
+++ b/src/Assets/Control/UI/Navlist/Passive.html
@@ -1,8 +1,11 @@
-<li>
-    <block><span class="muted pull-right"><k>Count</k></span></block>
-    <a href="/control/<k>ID</k>">
-        <img src="/img/icons/Control/<k>ID</k>.png" width="16" height="16" class="icon"/>
-        <l><k>ID</k>.Control:Title</l>
-    </a>
 
+<li>
+    <a href="/control/<k>ID</k>">
+        <image>
+            <Source><k>ID</k>:<k>ID</k>.png</Source>
+            <Width>16</Width>
+        </image>
+        <l><k>ID</k>.Control:Title</l>
+        <block><span class="muted pull-right"><k>Count</k></span></block>
+    </a>
 </li>
