--- a/src/Assets/Project/Frontpage.html
+++ b/src/Assets/Project/Frontpage.html
@@ -1,3 +1,5 @@
+<breadcrumb href="/">Главная</breadcrumb>
+<subtitle>Главная</subtitle>
 <div class="hero-unit">
     <h1>Codeine <call>Version.Codeine.Major</call></h1>
     <h2><call>Host</call></h2>
