--- a/src/Assets/Server/Control/Do.html
+++ b/src/Assets/Server/Control/Do.html
@@ -1,9 +1,1 @@
-<js>jquery.knob</js>
-<css>jquery.knob</css>
-<input type="text" value="0" class="dial" data-min="0" data-max="100" data-readonly="true">
-
-<jsrun>
-$(function() {
-    $(".dial").knob();
-});
-</jsrun>
+<place>Content</place>
