--- a/src/Assets/Developer/Control/Do.html
+++ b/src/Assets/Developer/Control/Do.html
@@ -1,18 +1,25 @@
-<h1>Ваш разработчик</h1>
+<div class="well">
+    <h2>Ваш разработчик</h2>
+    <if value="<call>Developer.Title</call>" neq="">
+            <img class="img-rounded pull-right" src="<call>Developer.URL</call>/img/logo.png" />
+            <h2>
+                <a href="<call>Developer.URL</call>"><call>Developer.URL</call></a>
+            </h2>
+            <a href="http://codeine-framework.ru">Сменить</a> &nbsp;
+            <a href="mailto:<call>Developer.EMail</call>">Написать</a> &nbsp;
+            <a href="tel:<call>Developer.Phone</call>">Позвонить</a> &nbsp;
+    </if>
 
-<div class="block">
-    <img class="img-rounded pull-right" src="<call>Developer.URL</call>/img/logo.png" />
-    <h2>
-        <a href="<call>Developer.URL</call>"><call>Developer.URL</call></a>
-    </h2>
-    <a href="http://codeine-framework.ru">Сменить</a> &nbsp;
-    <a href="mailto:<call>Developer.EMail</call>">Написать</a> &nbsp;
-    <a href="tel:<call>Developer.Phone</call>">Позвонить</a> &nbsp;
+    <if value="<call>Developer.Title</call>" eq="0">
+        <div class="alert alert-warning">
+            Нет разработчика.
+            <a href="http://codeine-framework.ru">Найти?</a> &nbsp;
+        </div>
+    </if>
 </div>
 
 <div class="clearfix"></div>
-<h1>Ваши лицензии</h1>
-
-<div class="block">
+<div class="well">
+    <h2>Ваши лицензии</h2>
     <place>Licenses</place>
 </div>
