--- a/src/Assets/Default/UI/Form/Maskfield.html
+++ b/src/Assets/Default/UI/Form/Maskfield.html
@@ -2,9 +2,7 @@
     <label class="control-label"><l><k>Label</k></l></label>
 
     <div class="controls">
-        <if value="<k>Prefix</k>" eq="+7"> <div class="input-prepend"> </if>
-        <block><span class="add-on"><k>Prefix</k></span></block><input type="text" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>required="<k>Required</k>"</block>>
-        <if value="<k>Prefix</k>" eq="+7"> </div> </if>
+        <input type="text" name="<k>Name</k>" id="<k>Name</k>" value="<k>Value</k>" <block>required="<k>Required</k>"</block> size="<k>Size</k>" />
     </div>
 </div>
 
