--- a/src/Assets/Errors/500.html
+++ b/src/Assets/Errors/500.html
@@ -7,4 +7,6 @@
 <h3>Что делать?</h3>
 Подождать и повторить запрос.
 
-<small class="pull-right">P.S. Команда сайта извещена об инциденте.</small>
+<div>P.S. Команда сайта извещена об инциденте.</div>
+
+<pre><place>Message</place></pre>
