--- a/src/down.html
+++ b/src/down.html
@@ -8,11 +8,14 @@
         color: #333333;
         text-align: center;
     }
+    img
+    {
+        margin: auto
+    }
 </style>
 </head>
 <body>
-<img src="http://one2team.ru/down.png" />
-<h1>Ведутся технические работы</h1>
+<img src="http://one2team.ru/down.png" alt="Ведутся технические работы"/>
 <!-- Ничего интересного в исходниках нет -->
 </body>
 </html>
