--- a/src/Assets/Default/UI/Form/Password/Two.html
+++ b/src/Assets/Default/UI/Form/Password/Two.html
@@ -1,23 +1,30 @@
-<div class="control-group">
-    <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:</label>
-    <div class="controls">
-        <input class="Pair_<k>Name</k>"
-               id="<k>Name</k>"
-               type="password"
-               data-minlength="4"
-               name="<k>Name</k>"
-               <block>required="<k>Required</k>"</block>
-                autocomplete="off"
-                value="<k>Value</k>"
-                <block>placeholder="<k>Placeholder</k>"</block>
-                <block>pattern="<k>Regex</k>"</block> />
+<div class="row-fluid">
+    <div class="span6">
+        <div class="control-group">
+            <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:</label>
+            <div class="controls">
+                <input class="Pair_<k>Name</k>"
+                       id="<k>Name</k>"
+                       type="password"
+                       data-minlength="4"
+                       name="<k>Name</k>"
+                       <block>required="<k>Required</k>"</block>
+                        autocomplete="off"
+                        value="<k>Value</k>"
+                        <block>placeholder="<k>Placeholder</k>"</block>
+                        <block>pattern="<k>Regex</k>"</block> />
+            </div>
+        </div>
     </div>
-</div>
-<div class="control-group">
-    <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
-    <div class="controls">
-        <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Required</k>"</block>
-        autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать"/>
+    <div class="span6">
+        <div class="control-group">
+            <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
+            <div class="controls">
+                <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Require
+                d</k>"</block>
+                autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать"/>
+            </div>
+        </div>
     </div>
 </div>
 <js>jquery.tools:equals</js>
