--- a/src/Assets/Errors/403.html
+++ b/src/Assets/Errors/403.html
@@ -1,3 +1,6 @@
+<breadcrumb href="<call>URL</call>">Ошибка 403</breadcrumb>
+<subtitle>Ошибка 403</subtitle>
+
 <h2>Ошибка 403</h2>
 
 <h3>Что случилось?</h3>
