--- a/src/Assets/Errors/404.html
+++ b/src/Assets/Errors/404.html
@@ -1,3 +1,6 @@
+<breadcrumb href="<call>URL</call>">Ошибка 404</breadcrumb>
+<subtitle>Ошибка 404</subtitle>
+
 <h2>Ошибка 404</h2>
 
 <h3>Что случилось?</h3>
