--- a/src/Assets/Message/List.html
+++ b/src/Assets/Message/List.html
@@ -1,3 +1,3 @@
-<subtitle>Входящие</subtitle>
-<breadcrumb href="/messages/inbox">Входящие</breadcrumb>
+<subtitle><l>Message.Entity:Folder.<call>Folder</call></l></subtitle>
+<breadcrumb href="/messages/inbox"><l>Message.Entity:Folder.<call>Folder</call></l></breadcrumb>
 <place>Content</place>
