--- a/src/Assets/Message/Show/Full.html
+++ b/src/Assets/Message/Show/Full.html
@@ -29,6 +29,7 @@
     <Method>Do</Method>
     <Call>
         <Entity>Message</Entity>
+        <Action>/message/new</Action>
         <Data>
             <To><k>From</k></To>
             <Subject><k>Subject</k></Subject>
