--- a/src/Assets/Security/Access/Rule/Show/Short.html
+++ b/src/Assets/Security/Access/Rule/Show/Short.html
@@ -1,5 +1,10 @@
 <tr>
     <td><k>Weight</k></td>
     <td><k>ID</k></td>
-    <td><img src="/images/icons/Security/Rule/Decision/<k>Decision</k>.png" /> <l>Security.Access.Rule.Decision.<k>Decision</k></l></td>
+    <td>
+        <image>
+            <Source>Security:<k>Decision</k>.png</Source>
+            <Width>16</Width>
+        </image>
+    </td>
 </tr>
