--- a/src/Assets/Message/Create.html
+++ b/src/Assets/Message/Create.html
@@ -1,3 +1,3 @@
-<subtitle>Новое</subtitle>
-<breadcrumb href="/messages/create">Новое</breadcrumb>
+<subtitle>Новое сообщение</subtitle>
+<breadcrumb href="/messages/create">Новое сообщение</breadcrumb>
 <place>Content</place>
