--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -1,22 +1,27 @@
 <breadcrumb href="/control">ЦУП</breadcrumb>
-<breadcrumb href="/control/<call>Bundle</call>"><l><call>Bundle</call>.Control:Title</l></breadcrumb>
-
+<div class="navbar">
+    <div class="navbar-inner">
+        <a class="brand" href="/"><call>Project.Title</call></a>
+        <exec>
+            <Service>User.Cabinet</Service>
+            <Method>Do</Method>
+        </exec>
+    </div>
+    <breadcrumbs/>
+</div>
 <subtitle>ЦУП</subtitle>
-<subtitle><l><call>Bundle</call>.Control:Title</l></subtitle>
 
-<div class="page-header hidden-print">
-    <a href="/">&larr; <l>Control.Panel:Return</l></a>
+<div class="hidden-print">
     <h2><l>Control.Panel:Title</l></h2>
     <h3><l><call>Bundle</call>.Control:Title</l></h3>
 </div>
-<div class="page-content">
-    <div class="row-fluid">
-        <div class="span3">
-            <div class="hidden-print"><place>Navigation</place></div>
-        </div>
-        <div class="span9">
-            <div class="hidden-print"><place>Sidebar</place></div>
-            <place>Content</place>
-        </div>
+
+<div class="row-fluid">
+    <div class="span3">
+        <div class="hidden-print"><place>Navigation</place></div>
+    </div>
+    <div class="span9">
+        <div class="hidden-print"><place>Sidebar</place></div>
+        <place>Content</place>
     </div>
 </div>
