--- a/src/Assets/Control/Panel.html
+++ b/src/Assets/Control/Panel.html
@@ -23,5 +23,6 @@
     <div class="span9">
         <div class="hidden-print"><place>Sidebar</place></div>
         <place>Content</place>
+        <place>Sidebar</place>
     </div>
 </div>
