--- a/src/Assets/Default/UI/Form/Password/Two.html
+++ b/src/Assets/Default/UI/Form/Password/Two.html
@@ -3,7 +3,7 @@
         <div class="control-group">
             <label class="control-label" for="<k>Name</k>"> <l><k>Label</k></l>:</label>
             <div class="controls">
-                <input class="Pair_<k>Name</k>"
+                <input class="Pair_<k>Name</k> span12"
                        id="<k>Name</k>"
                        type="password"
                        data-minlength="4"
@@ -20,7 +20,7 @@
         <div class="control-group">
             <label class="control-label" for="<k>Name</k>2"> Повторите пароль:</label>
             <div class="controls">
-                <input data-equals="<k>Name</k>" class="Pair_<k>Name</k>" id="<k>Name</k>2" type="password" <block>required="<k>Require
+                <input data-equals="<k>Name</k>" class="Pair_<k>Name</k> span12" id="<k>Name</k>2" type="password" <block>required="<k>Require
                 d</k>"</block>
                 autocomplete="off" value="<k>Value</k>" placeholder="Пароли должны совпадать"/>
             </div>
