--- a/src/Assets/Security/Auth/System/Password.html
+++ b/src/Assets/Security/Auth/System/Password.html
@@ -1,4 +1,4 @@
-<form method="post" class="form-horizontal def-form auth" action="/login">
+<form method="post" class="form-horizontal" action="/login">
     <div class="control-group">
         <label class="control-label" for="EMail"><l>User.Entity:<call>Determinant</call></l>:</label>
         <div class="controls">
